--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "stylus-loader": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.8",
     "vuetify": "^2.3.16"
