--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "constants": "^0.0.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.0",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
+    "lowdb": "^1.0.0",
     "stylus-loader": "^4.2.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8",
     "vuetify": "^2.3.16"
   },
