--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ali-oss": "^6.11.2",
     "axios": "^0.21.0",
     "constants": "^0.0.2",
     "core-js": "^3.6.5",
