--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@alicloud/pop-core": "^1.7.10",
+    "ali-oss": "^6.11.2",
     "axios": "^0.21.0",
     "constants": "^0.0.2",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "element-ui": "^2.14.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
+    "qs": "^6.9.4",
     "stylus-loader": "^4.2.0",
+    "urlencode": "^1.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8",
