--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@alicloud/sts-sdk": "^1.0.2",
     "ali-oss": "^6.11.2",
     "axios": "^0.21.0",
     "constants": "^0.0.2",
@@ -26,6 +27,7 @@
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
+    "@alicloud/pop-core": "^1.7.10",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
