--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.9.4",
     "stylus-loader": "^4.2.0",
     "urlencode": "^1.1.0",
+    "v-viewer": "^1.5.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8",
