--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8",
+    "vue-upload-component": "^2.8.20",
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
