--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^6.1.0",
     "sass": "^1.28.0",
     "sass-loader": "^10.0.4",
     "vue-cli-plugin-vuetify": "~2.0.7",
